--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-Hello  World
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url=http://daczkowski.azurewebsites.net/" />
+  </head>
+</html>
